fix(connectivity): chnage the spacing between the header and the search inut in the config pannels

--- a/packages/connectivity/src/styles/panel.scss
+++ b/packages/connectivity/src/styles/panel.scss
@@ -30,7 +30,7 @@
   & > div:not(.fe-loader) {
     min-height: auto;
     height: auto;
-    margin-bottom: 3rem;
+    margin-bottom: var(--element-padding-lg);
   }
 
   .fe-table__container {
